# data-reconciliation

./: .gitignore  Projektbeschreibung.docx  README.md  changelog.md  environment.yml  pyproject.toml  requirements.txt  start_jupyter.ps1  start_workspace.ps1  stop_jupyter.ps1  ~$ojektbeschreibung.docx
docs/: methodik.md
notebooks/: Untitled.ipynb
src/data_reconciliation/: __init__.py  main.py
src/data_reconciliation/io/: reader.py
src/data_reconciliation/preprocessing/: filter.py
src/data_reconciliation/reconciliation/: balance.py  reconcile.py
src/data_reconciliation/visualization/: plots.py  save.py
tests/: datensaetze_narasimhan_jordache.docx  test_filter.py  test_reader.py  test_reconcile.py
